--- a/personal website.html
+++ b/personal website.html
@@ -1,66 +1,96 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Personal Website</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
     <header>
-        <h1>Personal Website</h1>
-        <nav>
-                <div class='black'>
-                    <a href='personal website.html'>Home</a>
-                    <a href='https://www.starbucks.co.id'>Website</a>
-                </div>
-        </nav>
-    </header>
-    <h2>
-        <str>_______________________________________________________</str>
-    </h2>
-    <div>
-        <img src="profile-picture.png" alt="Profile Picture" style="width: 350px;height: 350px;">
-        <p>This is definitely me</p>
-    </div>
-    <h2>
-        <str>_______________________________________________________</str>
-    </h2>
-    <main>
-        <div class='row'>
-            <div class='post-text-box'>
-                <h1>Quick Introduction</h1>
-                <p>Hello There, My name is Jason (2802557781), I am a student from BINUS University</p>
-            </div>
-            <div class='profile'>
-                <h1>About Me</h1>
-                <div>
-                    <p>I am currently 18 years old attending BINUS International University</p>
-                    <p>This personal website was a task assigned to me by my TA for HCI-Lab</p>
-                    <p>I am actively learning about coding as i am going through with these tasks</p>
-                    <p>Hope your eyes do not hurt upon seeing this monstrosity of a website</p>
-                </div>
+        <div class="navbar">
+            <div class="logo">
+                <h2>Personal Website</h2>
             </div>
 
-            <h2>
-                <str>_______________________________________________________</str>
-            </h2>
+            <div class="navbar-links">
+                <ul class="navbar-menus">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="https://www.starbucks.co.id" target="_blank">Website</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <div class="container">
+            <div class="profile-container">
+                <div class="profiles">
+                    <div class="profile-picture">
+                        <img src="profile-picture.png" alt="Profile Picture" class="profile-image">
+                    </div>
+                    <div class="profile-data">
+                        <h2>Jason Franto Fong</h2>
+                        <p>
+                            Hello There, My name is Jason (2802557781), I am a student from BINUS University International.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="vertical">
+                <h2>About Me</h2>
+                <div class="mini-containers">
+                    <div class="mini-row">
+                        <div class="mini">
+                            <p>
+                                I am currently 18 years old attending BINUS International University
+                            </p>
+                        </div>
+                        <div class="mini">
+                            <p>
+                                This personal website was a task assigned to me by my TA for HCI-Lab
+                            </p>
+                        </div>
+                    </div>
+    
+                    <div class="mini-row">
+                        <div class="mini">
+                            <p>
+                                I am actively learning about coding as i am going through with these tasks
+                            </p>
+                        </div>
+                        <div class="mini">
+                            <p>
+                                Hope your eyes do not hurt upon seeing this monstrosity of a website
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
-    <h1>You can find me here!</h1>
-    <div class='white'>
     <footer>
-        <a href='https://x.com/elonmusk?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor'>Twitter</a>
-        <a href='https://github.com/Jasonnnnnnn1'>GitHub</a>
-        <a href='https://id.linkedin.com/company/spacex'>Linkedin</a>
+        <div class="navbar">
+            <div class="logo">
+                <p>I love miyeon from g-idle</p>
+            </div>
+
+            <div class="navbar-links">
+                <ul class="navbar-menus">
+                    <li><a href='https://x.com/elonmusk?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor' class="footer-icons"><i class='bx bxl-twitter'></i></a></li>
+                    <li><a href='https://github.com/Jasonnnnnnn1' class="footer-icons"><i class='bx bxl-github'></i></a></li>
+                    <li><a href='https://id.linkedin.com/company/spacex' class="footer-icons"><i class='bx bxl-linkedin-square' ></i></a></li>   
+                </ul>
+            </div>
+        </div>
     </footer>
-    </div>
-    <div>
-        <p>_</p>
-    </div>
-    <div>
-        <p>A lot of inspiration was taken from the internet hehe...</p>
-        <p>Website personally made by me (Jason) with inspiration</p>
-    </div>
 </body>
 
 </html>
